[metadata]
name = maci-std
project_urls =
    Docs = https://docs.macilib.org
    Code = https://github.com/aaronater10/maci
    Bugs = https://github.com/aaronater10/maci/issues
    CI = https://github.com/aaronater10/maci/actions
author = aaronater10
author_email = dev_admin@dunnts.com
description = The easy to use library for your data, configuration, and save files
long_description_content_type = text/markdown
long_description = file: ./README.md
keywords =
    maci
    aaronater10
    python
    py
    config
    file
    export
    parse
    text file
    cfg
    conf
    save file
    config file
    db
    database
    simple
    configuration
    alternative
    safe
    ini
    json
    xml
    yml
    data
    import
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X

[options]
py_modules = maci
packages = maci
package_dir = maci=maci
include_package_data = True
python_requires = >= 3.8
